# metrics-petri

./: .env.example  .gitignore  .ignore  .markdownlint.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  index.html  metadata.json  mkdocs.yml  mypy.ini  package-lock.json  package.json  package.md  pyproject.toml  pyrightconfig.json  requirements.txt  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  codeql.yml  mkdocs-gh-pages.yml  pip-audit.yml  publish.yml
docs/: batch-pipeline.md  contributing.md  index.md  model-card.md  user-guide.md
docs/api/: analysis.md  batch.md  cropper.md  index.md  model.md  reporting.md
evaluation_report/: README.md  run_evaluation.sh  setup_env.sh
evaluation_report/.texlive/texmf-var/fonts/pk/ljfour/jknappen/ec/: tcrm1095.600pk
evaluation_report/report/: report.tex  report_filled.aux  report_filled.out  report_filled.tex
evaluation_report/results/: metrics.csv  summary.json
evaluation_report/src/: evaluate.py  metrics.py  stats.py  utils.py
grayleafspot/: __init__.py  assets.py  cli.py  launcher.py
metrics-petri/: __init__.py  api.py  assets.py  bootstrap.py  cli.py  launcher.py
metrics_petri/: __init__.py  _model.py  _paths.py  _provenance.py
metrics_petri/models/: MODEL_CARD.md  best_area_w_0.7.pt.sha256
metrics_petri/pipeline/: README.md  __init__.py  analysis.py  app.py  cli.py  model.py  reporting.py
metrics_petri/pipelinesam/: README.md  __init__.py  cli.py  dish_cropper.py  image_metadata_gui.py  input.py  model_small_unet.py  pipeline.py
notebooks/: example_metrics-petri.ipynb
pipeline/: README.md  __init__.py  analysis.py  app.py  cli.py  model.py  reporting.py
pipelinesam/: README.md  __init__.py  cli.py  dish_cropper.py  image_metadata_gui.py  input.py  model_small_unet.py  pipeline.py
pipelinesam/notebooks/: example_metrics-petri.ipynb
server/: index.ts
site/: 404.html  index.html  objects.inv  sitemap.xml
site/api/: index.html
site/api/analysis/: index.html
site/api/batch/: index.html
site/api/cropper/: index.html
site/api/model/: index.html
site/api/reporting/: index.html
site/batch-pipeline/: index.html
site/code-of-conduct/: index.html
site/contributing/: index.html
site/model-card/: index.html
site/search/: search_index.json
site/security/: index.html
site/user-guide/: index.html
src/: App.tsx  types.ts
src/components/: AnalysisOverlay.tsx
src/notebook_code/: __init__.py  bootstrap.py  image_selector.py  trace_pipeline.py  trace_sections.py
src/services/: analysisService.ts
tests/: test_cli_options.py  test_cli_paths.py  test_gui_cli.py  test_metadata.py  test_metadata_schema.py  test_metrics.py  test_model_integrity.py  test_pipeline_examples.py  test_provenance.py  test_texture_metrics.py
