[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metrics-petri"
version = "0.0.1"
description = "Petri dish colony segmentation and morphometric analysis for fungal growth experiments"
readme = { file = "package.md", content-type = "text/markdown" }
requires-python = ">=3.10"
authors = [{ name = "Rohan R" }]
maintainers = [{ name = "Rohan R" }]
license = { text = "Apache-2.0" }
keywords = [
  "petri dish",
  "colony segmentation",
  "image analysis",
  "bioinformatics",
  "machine learning",
  "plant pathology",
  "fungal growth",
  "morphometrics",
  "UNet",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Image Recognition",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Operating System :: OS Independent",
]
dependencies = [
  "Pillow>=10.0.0",
  "pandas>=2.0.0",
  "torch>=2.1.0",
  "scikit-image>=0.22.0",
  "scipy>=1.11.0",
  "numpy>=1.24.0,<2.0",
  "opencv-python-headless>=4.8.0",
  "matplotlib>=3.7.0",
  "rawpy>=0.21.0",
  "huggingface_hub>=0.20.0",
]

[project.optional-dependencies]
gui = [
  "gradio>=6.0.0",
  "pillow-heif>=0.16.0",
]

[project.scripts]
metrics-petri          = "pipelinesam.cli:main"
metrics-petri-gui      = "pipeline.cli:main"
metrics-petri-metadata = "pipelinesam.image_metadata_gui:main"

[project.urls]
Homepage   = "https://github.com/rotsl/metrics-petri"
Repository = "https://github.com/rotsl/metrics-petri"
Issues     = "https://github.com/rotsl/metrics-petri/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["pipeline*", "pipelinesam*", "models"]

[tool.setuptools.package-data]
"pipeline"    = ["*.py"]
"pipelinesam" = ["*.py"]
"models"      = ["*.pt"]
