[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metrics-petri"
dynamic = ["version"]
description = "Petri dish colony segmentation and morphometric analysis for fungal growth experiments"
readme = { file = "package.md", content-type = "text/markdown" }
requires-python = ">=3.10"
authors = [{ name = "Rohan R" }]
maintainers = [{ name = "Rohan R" }]
license = "MIT"
keywords = [
  "petri dish",
  "colony segmentation",
  "image analysis",
  "bioinformatics",
  "machine learning",
  "plant pathology",
  "fungal growth",
  "morphometrics",
  "UNet",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Image Recognition",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Operating System :: OS Independent",
]
dependencies = [
  "Pillow>=10.0.0,<13",
  "pandas>=2.0.0,<4",
  "torch>=2.1.0,<3",
  "scikit-image>=0.22.0,<1",
  "scipy>=1.11.0,<2",
  "numpy>=1.24.0,<3",
  "opencv-python-headless>=4.8.0,<5",
  "matplotlib>=3.7.0,<4",
  "rawpy>=0.21.0,<1",
  "huggingface_hub>=0.20.0,<2",
]

[project.optional-dependencies]
gui = [
  "gradio>=6.0.0",
  "pillow-heif>=0.16.0",
]
test = [
  "bandit[toml]>=1.8,<2",
  "check-manifest>=0.51,<1",
  "coverage[toml]>=7.6,<8",
  "mypy>=1.10,<2",
  "pyright>=1.1,<2",
  "pytest>=8.0",
  "pytest-cov>=5,<8",
  "ruff>=0.6.0",
  "wheel",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.6",
  "mkdocstrings[python]>=0.29",
]
release = [
  "bump-my-version>=1.2,<2",
]

[project.scripts]
metrics-petri          = "metrics_petri.pipelinesam.cli:main"
metrics-petri-gui      = "metrics_petri.pipeline.cli:main"
metrics-petri-metadata = "metrics_petri.pipelinesam.image_metadata_gui:main"
metrics-petri-crop     = "metrics_petri.pipelinesam.dish_cropper:main"

[project.urls]
Homepage      = "https://github.com/rotsl/metrics-petri"
Repository    = "https://github.com/rotsl/metrics-petri"
Issues        = "https://github.com/rotsl/metrics-petri/issues"
Documentation = "https://rotsl.github.io/metrics-petri/"
Changelog     = "https://github.com/rotsl/metrics-petri/blob/main/CHANGELOG.md"

[tool.setuptools.dynamic]
version = {attr = "metrics_petri.__version__"}

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["metrics_petri*"]

[tool.setuptools.package-data]
"metrics_petri"            = ["py.typed"]
"metrics_petri.pipeline"   = ["*.py"]
"metrics_petri.pipelinesam" = ["*.py"]
"metrics_petri.models"     = ["*.pt", "*.sha256", "MODEL_CARD.md"]

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
files = ["metrics_petri"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
no_implicit_optional = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = [
  "metrics_petri.pipeline.app",
  "metrics_petri.pipelinesam.dish_cropper",
  "metrics_petri.pipelinesam.image_metadata_gui",
]
ignore_errors = true

[tool.coverage.run]
branch = true
source = ["metrics_petri"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.bandit]
exclude_dirs = ["tests", "notebooks", "site", "build", "dist"]
skips = ["B110", "B112"]

[tool.bumpversion]
current_version = "2.1.3"
parse = '(?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)'
serialize = ["{major}.{minor}.{patch}"]
commit = false
tag = false

[[tool.bumpversion.files]]
filename = "metrics_petri/__init__.py"

[[tool.bumpversion.files]]
filename = "CITATION.cff"
search = 'version: "{current_version}"'
replace = 'version: "{new_version}"'

[[tool.bumpversion.files]]
filename = "README.md"
search = "version = {{{current_version}}}"
replace = "version = {{{new_version}}}"

[[tool.bumpversion.files]]
filename = "package.md"
search = "version = {{{current_version}}}"
replace = "version = {{{new_version}}}"
